webcam-dual-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcam
spec:
  type: NodePort
  ports:
  - port: 8888
    name: http
  selector:
    app: webcam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcam
  labels:
    app: webcam
    tier: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webcam
      tier: main
  template:
    metadata:
      labels:
        app: webcam
        tier: main
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - webcam
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: webcam
        image: gongbaifei/webcam:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
