webcam-istio-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcam
  labels:
    app: webcam
spec:
  type: ClusterIP
  ports:
  - port: 8888
    name: http
  selector:
    app: webcam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcam-worker1
#  labels:
#    app: webcam
#    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webcam
      location: worker1
  template:
    metadata:
      labels:
        app: webcam
        location: worker1
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
      containers:
      - name: webcam
        image: gongbaifei/webcam:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcam-worker2
#  labels:
#    app: webcam
#    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webcam
      location: worker2
  template:
    metadata:
      labels:
        app: webcam
        location: worker2
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
      containers:
      - name: webcam
        image: gongbaifei/webcam:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
